[project]
name = "pushx"
version = "0.4.0"
description = "One-Stop Python Push Solution"
license = { text = "MIT" }
keywords = [ "push", "python" ,"allinone","AIO" ]
authors = [
    {name = "Illustar0",email = "me@illustar0.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.10.6,<3.0.0)",
]

[project.urls]
repository = "https://github.com/Illustar0/PushX"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "pushx/__init__.py:__version__",
    "docs/source/conf.py:release",
]
version_toml = [
    "pyproject.toml:project.version"
]
build_command = "pip install poetry && poetry build"